# NSE_Task_ORM_Flask

./: README.md  app.py  load_data.py  models.py  pyproject.toml  requarements.txt
data/: cities.csv  customers.csv  employees.csv  products.csv  sales.csv
instance/: structure.db
statics/: styles.css
structures/: crud.py  views.py
templates/: index.html
templates/marcos/: print_table.html
